# OctoPrint-HTU31

./: MANIFEST.in  README.md  htu_31_demo.py  setup.py
extras/: DHT22.md  HTU31.md  README.txt
extras/htu31_test_script/: README.md  htu31_test.py  pyproject.toml
octoprint_DHT22/: __init__.py
octoprint_DHT22/static/js/: DHT22.js
octoprint_DHT22/templates/: DHT22_settings.jinja2
octoprint_HTU31/: __init__.py
octoprint_HTU31/libs/: config.py
octoprint_HTU31/static/js/: DHT22.js
octoprint_HTU31/templates/: DHT22_settings.jinja2  HTU31_settings.jinja2
translations/: README.txt
